@@ -55,6 +55,8 @@ New features:
   at a manually input destination.
 - Implemented "That person is too far from you to trade." error message.
 - _whenWeaponEquipped _whenShieldEquipped conditions.
+- Implement packet 014C (guild ally/enemy list).
+- Detect $player->{guildID}.
 
 New commands:
 - storage log
